tests/paczka1/small_fuzzy/88151729.err
Error in line 6: DfjM3UPTUO Sss6 69,2
Error in line 5: HBbK A17 81,2
Error in line 11: Gx7QwUQyR1 A17 74,9
